--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,17 @@
-<h1>Angular App</h1>
+<h1>Titles: </h1>
+<app-title *ngFor="let title of titles" [titleText]="title"></app-title>
+
+<h1>Uppercase Titles: </h1>
+<app-title *ngFor="let title of uppercaseTitles" [titleText]="title"></app-title>
+
+
+<button (click)="changeTitles()">press</button>
+
+<ul>
+  <li  *ngFor="let item of apiContent">
+    {{ content.name }}
+  </li>
+
+</ul>
 
 <router-outlet></router-outlet>
